src/test/deca/context/invalid/created/rule3.66/soustypage.deca
// Résultat erreur:
//    Accès à un champ protégé d'une classe sans relation de sous-typage (règle 3.66)
//
// Description:
//    Tests de programme incorrect contextuellement (accès à un champ protégé sans relation de sous-typage)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class ClasseParente {
    protected int champProtege = 5;
}

class ClasseAutre {
    int uneMethode(ClasseParente obj) {
        return obj.champProtege;
    }
}
